fix: display raise ticket dialog correctly on mobile

--- a/demo/src/views/index.css
+++ b/demo/src/views/index.css
@@ -547,6 +547,13 @@
     align-items: center;
 }
 
+@media only screen and (max-width: 768px) {
+    .modal-content {
+        width: 80%;
+        height: 40%;
+    }
+}
+
 .close {
     color: #aaaaaa;
     float: right;
